Ensured that whenever the account menu is open, the horizontal scroll bar would not appear

--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
 body, html {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
+    overflow-x: hidden;
 }
 
 a {
